# evalforge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.dashboard  Makefile  README.md  SECURITY.md  SUPPORT.md  alembic.ini  compose.yaml  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
docs/: README.md  api.md  architecture.md  evaluation-methodology.md  extending.md  getting-started.md  operations.md  security.md  troubleshooting.md
docs/commercialization/: 2026-07-20-buyer-discovery.md  2026-07-20-hosted-blocker-audit.md  2026-07-20-hosted-pilot-offer-and-execution.md  2026-07-20-launch-and-day-14-decision.md  2026-07-20-local-demo-proof.md  2026-07-20-pilot-decision.md
docs/handoffs/: 2026-07-17-codex-evalforge-dashboard.handoff.mdc  2026-07-17-codex-evalforge-phase-2.handoff.mdc  2026-07-17-codex-evalforge-phase-2.precompact.handoff.mdc  2026-07-18-codex-evalforge-phase-3.handoff.mdc  2026-07-18-codex-evalforge-phase-3.precompact.handoff.mdc  2026-07-19-codex-evalforge-persisted-calibration-evidence.handoff.mdc
docs/llm-evaluation-dashboard/: 2026-07-17-completion.md  2026-07-17-phase-2-productization.md  2026-07-18-human-label-ingestion.md  2026-07-18-open-source-adoption.md  2026-07-18-phase-3-hardening.md  2026-07-18-release-hardening.md  2026-07-18-v0.2.0-release.md  2026-07-19-persisted-calibration-evidence.md  2026-07-19-v0.3.0-release.md  2026-07-20-commercialization-pilot.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md
examples/: calibration-labels.csv  calibration-labels.json  customer-support.csv  customer-support.json  rag-groundedness.json
examples/extensions/: README.md  custom_adapter.py  custom_evaluator.py  custom_export_sink.py
scripts/: start_api.py  start_dashboard.py  wait_for_api.py  wait_for_http.py
src/evalforge/: __init__.py  analytics.py  audit.py  cli.py  commercial.py  config.py  container.py  database.py  demo.py  errors.py  models.py  observability.py  repositories.py  schemas.py  seed.py  streamlit_app.py
tests/: conftest.py
tests/contract/: test_compose_contract.py  test_export_sink.py  test_extension_examples.py  test_project_contract.py  test_public_project_contract.py  test_release_contract.py  test_render_blueprint_contract.py  test_tenant_route_contract.py
tests/dashboard/: test_adoption_workflow.py  test_app.py  test_auth.py  test_client.py  test_commercial_settings.py  test_compare.py  test_components.py  test_identity_app.py  test_models.py  test_run_detail.py  test_state.py  test_truthfulness.py
tests/e2e/: README.md  test_dashboard_smoke.py  test_hosted_commercial_pilot.py
tests/integration/: test_analytics.py  test_api_authorization.py  test_api_workflow.py  test_calibration_api.py  test_commercial_api.py  test_database.py  test_durable_executor.py  test_identity_migration.py  test_postgresql.py  test_run_lifecycle.py  test_tenant_isolation.py
tests/live/: test_provider_calibration.py
tests/unit/: test_adapters.py  test_auth.py  test_calibration.py  test_calibration_io.py  test_calibration_service.py  test_cli_calibration.py  test_cli_identity.py  test_cli_migrate.py  test_config.py  test_container.py  test_demo_launcher.py  test_evaluator_contract.py  test_export_package.py  test_metrics.py  test_observability.py  test_permissions.py  test_prompts.py  test_schemas.py  test_seed.py  test_startup.py
(+60 files in other folders)
